--- a/Day2/Tutorial.ipynb
+++ b/Day2/Tutorial.ipynb
@@ -2,18 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f068ae06",
-   "metadata": {},
-   "source": [
-    "# Getting this notebook. \n",
-    "\n",
-    "Run: \n",
-    "\n",
-    "*git clone https://github.com/krishnaa423/parallel_tutorial.git*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "61e80769",
    "metadata": {},
    "source": [
@@ -22,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b7d6f9e3",
    "metadata": {},
    "outputs": [],
@@ -71,18 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "677dacd0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of 2 and 3 is: 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Declare some variables. \n",
     "a = 2\n",
@@ -107,18 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a7479cbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sum of arrays [1 2 3] and [4 5 6] is: [5 7 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the numpy module. \n",
     "import numpy as np \n",
@@ -164,21 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3ef949c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world from rank 1 of 4\n",
-      "Hello world from rank 0 of 4\n",
-      "Hello world from rank 2 of 4\n",
-      "Hello world from rank 3 of 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'hello_world.py'\n",
     "\n",
@@ -213,29 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3c836f60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before send and receive. Rank: 1, a: [0. 0. 0. 0.]\n",
-      "Before send and receive. Rank: 2, a: [0. 0. 0. 0.]\n",
-      "Before send and receive. Rank: 3, a: [0. 0. 0. 0.]\n",
-      "Before send and receive. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "After send and receive. Rank: 2, a: [0. 0. 0. 0.]\n",
-      "After send and receive. Rank: 3, a: [0. 0. 0. 0.]\n",
-      "After send and receive. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "After send and receive. Rank: 1, a: [0. 1. 2. 3.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'send_recv.py'\n",
     "\n",
@@ -293,25 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a1857a51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before send and receive. Rank: 1, a: [0. 0. 0. 0.]\n",
-      "Before send and receive. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "After send and receive. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "After send and receive. Rank: 1, a: [0. 0. 0. 0.]\n",
-      "\n",
-      "\n",
-      "After send and receive and waiting. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "After send and receive and waiting. Rank: 1, a: [0. 1. 2. 3.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'race_condition.py'\n",
     "\n",
@@ -372,29 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3a158074",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before broadcast. Rank: 1, a: [0. 0. 0. 0.]\n",
-      "Before broadcast. Rank: 2, a: [0. 0. 0. 0.]\n",
-      "Before broadcast. Rank: 3, a: [0. 0. 0. 0.]\n",
-      "Before broadcast. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "After broadcast. Rank: 0, a: [0. 1. 2. 3.]\n",
-      "After broadcast. Rank: 1, a: [0. 1. 2. 3.]\n",
-      "After broadcast. Rank: 2, a: [0. 1. 2. 3.]\n",
-      "After broadcast. Rank: 3, a: [0. 1. 2. 3.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'broadcast.py'\n",
     "\n",
@@ -448,29 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "256639bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before scatter. Rank: 0, a: [0. 1. 2. 3. 4. 5. 6. 7.], b: [0. 0.]\n",
-      "Before scatter. Rank: 3, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [0. 0.]\n",
-      "Before scatter. Rank: 2, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [0. 0.]\n",
-      "Before scatter. Rank: 1, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [0. 0.]\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "After scatter. Rank: 0, a: [0. 1. 2. 3. 4. 5. 6. 7.], b: [0. 1.]\n",
-      "After scatter. Rank: 1, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [2. 3.]\n",
-      "After scatter. Rank: 2, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [4. 5.]\n",
-      "After scatter. Rank: 3, a: [0. 0. 0. 0. 0. 0. 0. 0.], b: [6. 7.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename = 'scatter.py'\n",
     "\n",
@@ -523,29 +412,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dc17f430",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before gather. Rank: 0, b: [0. 1.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "Before gather. Rank: 1, b: [2. 3.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "Before gather. Rank: 2, b: [4. 5.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "Before gather. Rank: 3, b: [6. 7.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "\n",
-      "After gather. Rank: 1, b: [2. 3.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After gather. Rank: 2, b: [4. 5.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After gather. Rank: 3, b: [6. 7.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After gather. Rank: 0, b: [0. 1.], c: [0. 1. 2. 3. 4. 5. 6. 7.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename='gather.py'\n",
     "\n",
@@ -599,29 +469,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "77b5da67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before reduce. Rank: 0, b: [0. 1. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "Before reduce. Rank: 1, b: [2. 3. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "Before reduce. Rank: 2, b: [4. 5. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "Before reduce. Rank: 3, b: [6. 7. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "\n",
-      "\n",
-      "After reduce. Rank: 1, b: [2. 3. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After reduce. Rank: 2, b: [4. 5. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After reduce. Rank: 3, b: [6. 7. 0. 0. 0. 0. 0. 0.], c: [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "After reduce. Rank: 0, b: [0. 1. 0. 0. 0. 0. 0. 0.], c: [12. 16.  0.  0.  0.  0.  0.  0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename='reduce.py'\n",
     "\n",
@@ -682,25 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2149dae3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ntask: 1, time: 0.01741371700001082, sum: 49999995000000.0\n",
-      "ntask: 2, time: 0.01752307099999939, sum: 49999995000000.0\n",
-      "ntask: 3, time: 0.01763409800000204, sum: 49999995000000.0\n",
-      "ntask: 4, time: 0.018580310000004374, sum: 49999995000000.0\n",
-      "ntask: 5, time: 0.016705353000020295, sum: 49999995000000.0\n",
-      "ntask: 6, time: 0.017415216000017608, sum: 49999995000000.0\n",
-      "ntask: 7, time: 0.016154229000022724, sum: 49999995000000.0\n",
-      "ntask: 8, time: 0.017784209000012652, sum: 49999995000000.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename='time_vs_tasks.py'\n",
     "\n",
@@ -805,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
